# Strainer

./: CMakeLists.txt  README.md
resource/: strainereditor.uidesc
source/: plugids.h  strainercids.h  strainercontroller.cpp  strainercontroller.h  strainerentry.cpp  strainerprocessor.cpp  strainerprocessor.h  version.h
